--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
   <body>
     <main>
-      {% include header.html %} {% include bio.html %}
-      <section class="articles">
-        {% for post in site.posts %}
-        <article class="article">
-          <h2 class="article-title">
-            <a href="{{site.baseurl}}{{post.url}}"> {{post.title}} </a>
-          </h2>
-          <small class="date">{{post.date | date_to_string}}</small>
+      {% include header.html %}
+      <section class="article">
+        <div class="article-header">
+          <h2 class="article-title">{{page.title}}</h2>
+          <small class="date">{{page.date | date_to_string}}</small>
           <div class="categories">
-            {% for c in post.categories %}
-            <a href="#!" data-base-url="{{site.baseurl}}" class="category"
-              >{{c}}</a
-            >
+            {% for c in page.categories %}
+            <a href="#!" class="category">{{c}}</a>
             {% endfor %}
           </div>
-        </article>
-        {%endfor%}
+        </div>
+        <div class="content">{{content}}</div>
       </section>
       {% include footer.html %}
     </main>
